<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_cancel_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="X"/>

    <EditText
        android:id="@+id/edittext_new_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_new_task_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:hint="Date" />

        <ImageButton
            android:id="@+id/btn_new_task_datepicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="36dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/btn_submit_add_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="Create" />

    </LinearLayout>

</LinearLayout>